Edited README via GitHub

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Testing different automatic differentiating approaches for complex machine learning tasks ...
+Testing different automatic differentiation approaches for complex machine learning tasks ...
